# subtle

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/subtle/: __init__.py  __main__.py  api.py  cli.py  routes.py  server.py
src/subtle/models/: __init__.py  message.py  session_log_file.py
static/js/: app.js  session-timeline.js
templates/: base.html  session_detail.html  sessions_list.html
tests/: conftest.py
tests/api/: test_sessions.py
tests/integration/: test_real_logs.py
tests/models/: test_message.py  test_session_log_file.py
tests/routes/: test_pages.py
