[project]
name = "subtle-claude-code"
version = "0.0.2"
description = "Claude Code session log explorer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["claude", "claude-code", "session-logs", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "ruff>=0.14.0",
    "twine>=6.0.0",
]

[project.scripts]
subtle = "subtle.cli:main"

[project.urls]
Repository = "https://github.com/itsderek23/subtle"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/subtle"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "subtle/templates"
"static" = "subtle/static"
